# balr

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
balr/: utils.py
balr/binary_attributes/: autoencoder.py  encoder.py  task.py  trainer.py
balr/cli/: main.py
balr/config/: configs.py
balr/data/: dataset.py  stats.py
balr/embeddings/: embeddings.py  task.py  wespeaker.py
balr/evaluation/: metrics.py
balr/losses/: arcface_loss.py  base_autoencoder_loss.py  mse_loss.py  sparsity_loss.py  triplet_margin_loss.py
balr/samplers/: nxm_samplers.py
balr/scoring/: beta.py  cosine.py  llr.py  scoring.py  task.py  utils.py
binary_attributes/: index.html
datasets/: index.html
docs/: binary_attributes.md  configuration.md  datasets.md  embeddings.md  index.md  losses.md  samplers.md  trainer.md
docs/scoring/: beta.md  scorers.md  scoring.md
embeddings/: index.html
losses/: index.html
resources/data/voxceleb2/: metadata.csv  test.csv  train.csv  trials.csv
resources/models/BAE/: BAE_mse.pt  README.md  events.out.tfevents.1755524109.r3i6n3.1934353.0
samplers/: index.html
scoring/beta/: index.html
scoring/scorers/: index.html
scoring/scoring/: index.html
search/: search_index.json
tests/: conftest.py
tests/binary_attributes/: test_autoencoder.py  test_trainer.py
tests/data/: test_dataset.py  test_stats.py
tests/evaluation/: test_metrics.py
tests/losses/: test_sparsity_loss.py
tests/samplers/: test_nxm_samplers.py
tests/scoring/: conftest.py  test_beta.py  test_llr.py  test_scoring.py  test_task.py  test_utils.py
trainer/: index.html
